缓存已转换的文件

--- a/src/main/resources/custom.properties
+++ b/src/main/resources/custom.properties
@@ -19,6 +19,18 @@ convert.win.serverPath=
 convert.linux.on=true
 convert.win.first=false
 
+#MYSQL DATABASE SETTINGS
+jdbc.type=mysql
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/wopi?useUnicode=true&amp;characterEncoding=utf8&amp;zeroDateTimeBehavior=convertToNull
+jdbc.username=root
+jdbc.password=jansing
+
+#POOL SETTINGS
+jdbc.pool.init=1
+jdbc.pool.minIdle=1
+jdbc.pool.maxIdle=5
+jdbc.pool.maxActive=10
 
 #============================#
 #==== FRAMEWORK SETTINGS ====#
