--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
   <!-- Context ConfigLocation -->
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>classpath*:/spring-context*.xml</param-value>
+    <param-value>classpath:/spring-context.xml</param-value>
   </context-param>
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -42,7 +42,7 @@
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <init-param>
       <param-name>contextConfigLocation</param-name>
-      <param-value>classpath*:/spring-mvc*.xml</param-value>
+      <param-value>classpath:/spring-mvc*.xml</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
