--- a/src/main/resources/custom.properties
+++ b/src/main/resources/custom.properties
@@ -18,6 +18,9 @@ convert.win.on=false
 convert.win.serverPath=
 convert.linux.on=true
 convert.win.first=false
+convert.saveServer.path=http://127.0.0.1:8089
+convert.saveServer.upload=/uploadAjax
+convert.saveServer.askExist=/askExist
 
 #MYSQL DATABASE SETTINGS
 jdbc.type=mysql
