--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    <modules>
-        <module>../web</module>
-    </modules>
+    <!--<modules>-->
+        <!--<module>../web</module>-->
+    <!--</modules>-->
 
 
     <dependencies>
@@ -28,6 +28,7 @@
             <groupId>com.jansing</groupId>
             <artifactId>web</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
         </dependency>
 
         <dependency>
