--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -8,7 +8,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d [%-5p][%c{5}]%l %m%n
 
 ### \u8F93\u51FADEBUG \u7EA7\u522B\u4EE5\u4E0A\u7684\u65E5\u5FD7\u5230=log/log.log ###
 log4j.appender.fout = org.apache.log4j.FileAppender
-log4j.appender.fout.File = ../logs/newlog.log
+log4j.appender.fout.File = ../logs/libre.log
 #\u914D\u7F6E\u6587\u4EF6\u540D
 log4j.appender.fout.DatePattern=yyyy-MM-dd'.log'
 log4j.appender.fout.Append = true
