--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,18 +1,19 @@
  ### \u8BBE\u7F6E###
-log4j.rootLogger = WARN,stdout,fout
+log4j.rootLogger = WARN,stdout
+#log4j.rootLogger = WARN,stdout,fout
 
 ### \u8F93\u51FA\u4FE1\u606F\u5230\u63A7\u5236\u62AC ###
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d [%-5p][%c{5}]%l %m%n
 
-### \u8F93\u51FADEBUG \u7EA7\u522B\u4EE5\u4E0A\u7684\u65E5\u5FD7\u5230=log/log.log ###
-log4j.appender.fout = org.apache.log4j.FileAppender
-log4j.appender.fout.File = ../logs/newlog.log
-#\u914D\u7F6E\u6587\u4EF6\u540D
-log4j.appender.fout.DatePattern=yyyy-MM-dd'.log'
-log4j.appender.fout.Append = true
-log4j.appender.fout.Threshold = info
-log4j.appender.fout.layout = org.apache.log4j.PatternLayout
-log4j.appender.fout.encoding=UTF-8
-log4j.appender.fout.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [%-5p]%l %m%n
+#### \u8F93\u51FADEBUG \u7EA7\u522B\u4EE5\u4E0A\u7684\u65E5\u5FD7\u5230=log/log.log ###
+#log4j.appender.fout = org.apache.log4j.FileAppender
+#log4j.appender.fout.File = ../logs/libre.log
+##\u914D\u7F6E\u6587\u4EF6\u540D
+#log4j.appender.fout.DatePattern=yyyy-MM-dd'.log'
+#log4j.appender.fout.Append = true
+#log4j.appender.fout.Threshold = info
+#log4j.appender.fout.layout = org.apache.log4j.PatternLayout
+#log4j.appender.fout.encoding=UTF-8
+#log4j.appender.fout.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [%-5p]%l %m%n
