--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>war</packaging>
     <groupId>libreoffice</groupId>
-    <artifactId>libreoffice</artifactId>
+    <artifactId>libreoffice-first</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -17,11 +17,6 @@
         <encoding>UTF-8</encoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-    <modules>
-        <module>../web</module>
-    </modules>
-
 
     <dependencies>
         <dependency>
@@ -73,6 +68,6 @@
     </dependencies>
 
     <build>
-        <finalName>libreoffice</finalName>
+        <finalName>libreoffice-first</finalName>
     </build>
 </project>
