--- a/src/main/resources/custom.properties
+++ b/src/main/resources/custom.properties
@@ -41,7 +41,7 @@ session.sessionTimeout=1800000
 #\u4F1A\u8BDD\u6E05\u7406\u95F4\u9694\u65F6\u95F4\uFF0C \u5355\u4F4D\uFF1A\u6BEB\u79D2\uFF0C2m=120000ms\u3002
 session.sessionTimeoutClean=120000
 #httpclient\u8FDE\u63A5\u65F6\u95F4\uFF0C \u5355\u4F4D\uFF1A\u6BEB\u79D2\uFF0C30s=30000ms\u3002
-httpclient.timeout=30000ms
+httpclient.timeout=30000
 
 #\u7D22\u5F15\u9875\u8DEF\u5F84
 web.view.index=/
